crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_partition__empty_partitions_data.snap
---
source: crates/store/re_redap_tests/src/tests/register_partition.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬───────────────────┬──────────────────┐
│ rerun_segment_id ┆ rerun_layer_names ┆ rerun_num_chunks │
╞══════════════════╪═══════════════════╪══════════════════╡
└──────────────────┴───────────────────┴──────────────────┘
