crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_partition__list_empty_data.snap
---
source: crates/store/re_redap_tests/src/tests/register_partition.rs
expression: filtered_batch.format_snapshot(false)
---
┌────────────────────┬───────────────────┬──────────────────┐
│ rerun_partition_id ┆ rerun_layer_names ┆ rerun_num_chunks │
╞════════════════════╪═══════════════════╪══════════════════╡
└────────────────────┴───────────────────┴──────────────────┘
