crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_partition__manifest_list_all_data.snap
---
source: crates/store/re_redap_tests/src/tests/register_partition.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬────────────────────┬──────────────────┬──────────────────┬──────────────────────────────────────────────────────────────────┐
│ rerun_layer_name ┆ rerun_partition_id ┆ rerun_layer_type ┆ rerun_num_chunks ┆ rerun_schema_sha256                                              │
╞══════════════════╪════════════════════╪══════════════════╪══════════════════╪══════════════════════════════════════════════════════════════════╡
│ base             ┆ my_partition_id1   ┆ rrd              ┆ 4                ┆ 383235764629dac8b1a559a059ee00f52ab9960d1cc44316c186b4e0b28c77ba │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ base             ┆ my_partition_id2   ┆ rrd              ┆ 2                ┆ 9e59992e048e77f799854e1663b7599a6362d180738b04f79fda8446cee12af1 │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ base             ┆ my_partition_id3   ┆ rrd              ┆ 6                ┆ b5d033e3ca77afae1462b29fdd1583aeb8cd78e1ab07e6df8fcb6cbf630644a1 │
└──────────────────┴────────────────────┴──────────────────┴──────────────────┴──────────────────────────────────────────────────────────────────┘
