crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_partition__out_of_order_properties_manifest_data.snap
---
source: crates/store/re_redap_tests/src/tests/register_partition.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬────────────────────┬──────────────────┬──────────────────┬──────────────────────────────────────────┬──────────────────────────────────────────┐
│ rerun_layer_name ┆ rerun_partition_id ┆ rerun_layer_type ┆ rerun_num_chunks ┆ rerun_schema_sha256                      ┆ property:text_log:TextLog:text           │
╞══════════════════╪════════════════════╪══════════════════╪══════════════════╪══════════════════════════════════════════╪══════════════════════════════════════════╡
│ prop1            ┆ my_partition_id1   ┆ rrd              ┆ 1                ┆ 90433089a733d463b38411fbda5e7deb84ba382… ┆ [I was logged first, registered last, s… │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ prop2            ┆ my_partition_id1   ┆ rrd              ┆ 1                ┆ 90433089a733d463b38411fbda5e7deb84ba382… ┆ [I was logged last, registered first]    │
└──────────────────┴────────────────────┴──────────────────┴──────────────────┴──────────────────────────────────────────┴──────────────────────────────────────────┘
