crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_partition__out_of_order_properties_partitions_data.snap
---
source: crates/store/re_redap_tests/src/tests/register_partition.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬───────────────────┬──────────────────┬──────────────────────────────────────────┐
│ rerun_segment_id ┆ rerun_layer_names ┆ rerun_num_chunks ┆ property:text_log:TextLog:text           │
╞══════════════════╪═══════════════════╪══════════════════╪══════════════════════════════════════════╡
│ my_partition_id1 ┆ [prop2, prop1]    ┆ 2                ┆ [I was logged first, registered last, s… │
└──────────────────┴───────────────────┴──────────────────┴──────────────────────────────────────────┘
