crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_partition__out_of_order_properties_partitions_schema.snap
---
source: crates/store/re_redap_tests/src/tests/register_partition.rs
expression: batch.format_schema_snapshot()
---
property:text_log:TextLog:text: List[nullable Utf8] [
    rerun:archetype:rerun.archetypes.TextLog
    rerun:component:TextLog:text
    rerun:component_type:rerun.components.Text
    rerun:entity_path:/__properties/text_log
    rerun:kind:data
]
rerun_last_updated_at: Timestamp(ns)
rerun_layer_names: List[Utf8]
rerun_num_chunks: u64
rerun_segment_id: Utf8
rerun_size_bytes: u64
rerun_storage_urls: List[Utf8]
