crates/store/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__register_partition__register_prefix_manifest_data.snap
---
source: crates/store/re_redap_tests/src/tests/register_partition.rs
assertion_line: 304
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬────────────────────┬──────────────────┬──────────────────┬──────────────────────────────────────────────────────────────────┐
│ rerun_layer_name ┆ rerun_partition_id ┆ rerun_layer_type ┆ rerun_num_chunks ┆ rerun_schema_sha256                                              │
╞══════════════════╪════════════════════╪══════════════════╪══════════════════╪══════════════════════════════════════════════════════════════════╡
│ base             ┆ my_partition_id1   ┆ rrd              ┆ 4                ┆ d993555a9bb588ccebb86ba420107954c37d657515fa8894d040f533fa77d0a9 │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ base             ┆ my_partition_id2   ┆ rrd              ┆ 2                ┆ 7445711ea6547499a41035b6572d7adb6021f9efb63e9a01b7210e2e3b0074f1 │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ base             ┆ my_partition_id3   ┆ rrd              ┆ 6                ┆ a2844c9fa0464c154088a30c919663988c7a332a8ffc8fff66671c8e1d6ad071 │
└──────────────────┴────────────────────┴──────────────────┴──────────────────┴──────────────────────────────────────────────────────────────────┘
